--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.3.0",
   "description": "My first node package!",
   "main": "index.js",
+  "bin": {
+    "wago-says-hi": "bin/wago-says-hi.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
